feat: added GET /clubs/:id and POST /clubs
